# image-processing-rs

ip1-point-operation/: Cargo.toml  run.sh
ip1-point-operation/src/: main.rs
ip2-filter/: Cargo.toml  run.sh
ip2-filter/src/: main.rs
ip3-edge-and-contour/: Cargo.toml  run.sh
ip3-edge-and-contour/src/: _read_image.rs  image_ext.rs  lib.rs  main.rs
ip4-color-conversion/: Cargo.toml  run.sh
ip4-color-conversion/src/: main.rs
ip5-misc/: Cargo.toml  crop.sh  tmp.gpi  tmp_ssd.csv
ip5-misc/src/: main.rs
