[package]
name = "ip5-misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
image = { version = "0.24", default-features = false, features = ["bmp"] }
num-traits = "0.2"
